# simplibs-signature

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/simplibs/signature/: __init__.py  copy_signature.py  create_signature.py
src/simplibs/signature/core/: __init__.py
tests/: test_copy_signature.py  test_create_signature.py
tests/core/parameter_collector/: test_parameter_collector.py
tests/core/signature_creator/: test_signature_creator.py
tests/decorators/: test_signature.py  test_signature_copy.py  test_signature_set.py
tests/decorators/builders/: test_apply_signature_to_wraps.py  test_create_signature_decorator.py
tests/parameter_collector/: test_parameter_collector.py
tests/parameter_collector/_mixins/: test_add.py  test_get_ordered.py
tests/parameter_collector/_validations/: test_validate_is_tuple_with_str.py
tests/signature_creator/: test_create_signature.py  test_signature_creator.py
tests/signature_creator/_mixins/: test_process_adds.py  test_process_func.py  test_process_parameters.py  test_resolve_return_type.py
tests/signature_creator/_validations/: test_validate_if_adds_or_base_func_is_set.py  test_validate_is_type_or_callable.py
tests/signature_decorators/: test_signature_copy.py  test_signature_from.py
tests/signature_decorators/utils/: test_apply_signature_to_wraps.py  test_create_signature_decorator.py
tests/utils/_validations/: test_validate_is_bool.py  test_validate_is_callable.py  test_validate_is_inspect_signature.py  test_validate_is_string.py  test_validate_is_type.py
tests/utils/constants/: test_args.py  test_excluded.py  test_kwargs.py
tests/utils/parameters/: test_create_keyword_parameter.py  test_create_positional_parameter.py
(+128 files in other folders)
