[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplibs-signature"
version = "0.2.0"
description = "Lightweight utilities for dynamic and declarative function signature manipulation, inspection, and validation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = [
    "signature",
    "inspect",
    "introspection",
    "decorator",
    "function-manipulation",
    "validation",
    "type-hints",
    "simplibs",
    "developer-tools",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "simplibs-exception>=0.1.0",
    "simplibs-sentinels>=0.1.0",
]

[[project.authors]]
name = "Dalibor Sova (Sudip2708)"
email = "daliborsova@seznam.cz"

[project.urls]
Homepage = "https://github.com/simplibs/simplibs-signature"
Repository = "https://github.com/simplibs/simplibs-signature"
Issues = "https://github.com/simplibs/simplibs-signature/issues"
Changelog = "https://github.com/simplibs/simplibs-signature/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["src"]